--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -1,3 +1,4 @@
+aiokafka==0.7.2
 anyio==3.4.0
 argon2-cffi==21.3.0
 argon2-cffi-bindings==21.2.0
@@ -31,6 +32,7 @@ jupyter-console==6.4.3
 jupyter-core==4.9.2
 jupyterlab-pygments==0.1.2
 jupyterlab-widgets==1.0.2
+kafka-python==2.0.2
 MarkupSafe==2.0.1
 matplotlib-inline==0.1.3
 mistune==0.8.4
